--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,11 @@
       <p>Current lines of inquiry and active studies.</p>
         <article class="card" aria-labelledby="project2-title">
           <h4 id="project2-title">Digital Multimeters as Low Cost Dataloggers: Citizen Science and Authentic Cross-curricula Learning</h4>
-          <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to project details and resources">Link to project details and resources</a></p>
+          <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
+        </article>
+        <article class="card" aria-labelledby="project2-title">
+          <h4 id="project2-title">Picaxe Casio graphics calculator: Low-Cost Sensor Upgrade for Authentic STEM Learning</h4>
+          <p><a href="projects/casio-calculator-picaxe-sensors.html" aria-label="Link to Casio and Picaxe project details">Link to Casio and Picaxe project details</a></p>
         </article>
       <p> More to be added soon...</p>
     </main>
