--- a/projects/b9-robot-mobile-laboratory.html
+++ b/projects/b9-robot-mobile-laboratory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Digital Multimeters as Datalogger Substitutes</title>
+  <title>Michael Fenton — B9 Robot: Movie props for authentic STEM learning</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -46,7 +46,7 @@
   <header class="topbar" role="banner" aria-label="Primary site header">
     <div class="brand">
       <span class="brand__logo" aria-hidden="true">MF</span>
-      <a class="brand__name" href="index.html" aria-label="Home page of Michael Fenton">Michael Fenton</a>
+      <a class="brand__name" href="../index.html" aria-label="Home page of Michael Fenton">Michael Fenton</a>
     </div>
     <button class="nav-toggle" aria-expanded="false" aria-controls="mainnav" aria-label="Toggle navigation menu">
       <span class="nav-toggle__bar" aria-hidden="true"></span>
@@ -82,15 +82,11 @@
     </aside>
     <main id="content" class="content" role="main" tabindex="-1">
       <section class="intro" aria-labelledby="intro-heading">
-        <h2 id="intro-heading">Development of Multimeter-Based Sensor Systems</h2>
-	<p>Michael Fenton came to Secondary teaching with research and industry experience.
-	He knew that investigating how the world works requires seeing more than the eyes alone can reveal.
-	School science equipment is limited, with expensive data loggers and sensors reserved for senior classes 
-	and limited to specialist subject use. This means that junior general science classes 
-	are unlikely to access tools that could transform their learning and view of the world.
-	From the early 2000's Michael developed and trialed low-cost sensor systems for cross-curricular learning
-	in junior science and mathematics classes. Their use was extended to senior specialist subject areas
-	with great success.</p>
+        <h2 id="intro-heading">Movie and TV props to engage STEM learners</h2>
+	<p>Michael Fenton is a scientist... he could not have been anything else.</p>
+	<p>Re-runs of Sci-Fi shows from the 60's and 70’s portrayed scientists as handsome heroes. They were fit, athletic, and knew how to save beautiful monsters from ravenous maidens! Science was cool, immensely exciting and called upon the cunning and creativity of its heroes to save the situation. These hereos could travel to the bottom of the sea or the far reachers of space... outdoors was where the science was! Oh, and the wonders you can do with your science knowledge;  you could build fantastic machines, like the Thunderbirds, Seaview or the Jupiter 2!</p>
+<p>Michael always thought the B9 robot was a clever way to design a multi-purpose transportable science lab. And it also made a great companion, warning of danger, monitoring the environment and playing music! He wanted one of his own.</p>
+<p>As an adult, Michael came to Secondary teaching with research and industry experience. School science equipment is limited, with expensive data loggers and sensors reserved for senior classes and limited to specialist subject use. This means that junior general science classes are unlikely to access tools that could transform their learning and view of the world. Maybe a B9 Environmental Control robot could fill the gap? Even better, explore the art behind science and technology, and see how science and technology need and benefit each other. 
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
             <li>Michael pioneered the concept of using digital multimeters as substitutes for data loggers for cross-curricular learning at all levels.</li>
