--- a/projects/digital-multimeters-as-dataloggers.html
+++ b/projects/digital-multimeters-as-dataloggers.html
@@ -46,7 +46,7 @@
   <header class="topbar" role="banner" aria-label="Primary site header">
     <div class="brand">
       <span class="brand__logo" aria-hidden="true">MF</span>
-      <a class="brand__name" href="index.html" aria-label="Home page of Michael Fenton">Michael Fenton</a>
+      <a class="brand__name" href="../index.html" aria-label="Home page of Michael Fenton">Michael Fenton</a>
     </div>
     <button class="nav-toggle" aria-expanded="false" aria-controls="mainnav" aria-label="Toggle navigation menu">
       <span class="nav-toggle__bar" aria-hidden="true"></span>
