--- a/projects.html
+++ b/projects.html
@@ -88,8 +88,12 @@
           <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
-          <h4 id="project2-title">Picaxe Casio graphics calculator: Low-Cost Sensor Upgrade for Authentic STEM Learning</h4>
+          <h4 id="project2-title">Picaxe Casio graphics Calculator: Low-Cost Sensor Upgrade for Authentic STEM Learning</h4>
           <p><a href="projects/casio-calculator-picaxe-sensors.html" aria-label="Link to Casio and Picaxe project details">Link to Casio and Picaxe project details</a></p>
+        </article>
+        <article class="card" aria-labelledby="project2-title">
+          <h4 id="project2-title">Art Meets Science with Digital Technology: The Real-world Interactive Games and Electronics Link</h4>
+          <p><a href="projects/rigel-games-electronics-link.html" aria-label="Link to RIGEL project details">Link to RIGEL project details</a></p>
         </article>
       <p> More to be added soon...</p>
     </main>
