--- a/projects/casio-calculator-picaxe-sensors.html
+++ b/projects/casio-calculator-picaxe-sensors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="home">
 <head>
-  <title>Michael Fenton — Casio graphics calculators as a sensor display and data analysis tool</title>
+  <title>Michael Fenton — Casio graphic calculators as a sensor display and data analysis tool</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Academic portfolio and CV for Michael Fenton, showcasing innovative teaching, research, talks, workshops, and publications." />
@@ -84,18 +84,18 @@
 	He knew that investigating how the world works requires seeing more than the eyes alone can reveal.
 	School science equipment is limited, with expensive data loggers and sensors reserved for senior classes.
  	After teaching Chemistry, Biology, Physics and Calculus, he wondered if he could invent a low cost system that would permit authentic hands-on data collection for cross-curricula learning in these subject.</p> 
-<p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphics calculator. He invented a reliable and robust connector and interface circuit for bi-directional communication. This upgrades the Casio FX-9750 and Casio FX-9860 graphics calulators to robot remote control units as well as Picaxe (or Arduino) sensor data display units.</p>
+<p>He was using Picaxe microcontrollers with his Nexus Research Group students, so he focused on connecting a Picaxe-18 to a Casio FX-9750 graphic  calculator. He invented a reliable and robust connector and interface circuit for bi-directional communication. This upgrades the Casio FX-9750 and Casio FX-9860 graphic calulators to robot remote control units as well as Picaxe (or Arduino) sensor data display units.</p>
         <h3 id="key-ideas">Key ideas</h3>
           <ul>
-            <li>Michael pioneered classroom trials for using a standard school Casio graphics calulator as a datalogger sensor system for cross-curricular learning.</li>
+            <li>Michael pioneered classroom trials for using a standard school Casio graphic calulator as a datalogger sensor system for cross-curricular learning.</li>
             <li>He developed a wide range of DIY home-made and low-cost sensors, many cost just a few cents. Sensors can measure range (distance), water vapour, temperature, pressure, alpha radiation, visible light, ultra violet (UV) light, infra red (IR) light, water hardness, static electric fields, mobile phone signals, angles, magnetic fields, and salinity.</li>
 	    <li>This system provided a robust low-cost tool for collecting data for use in senior high school subjects, such as Physical Education, Horticulture, Biology, Chemistry, Physics, Earth and Space Science, Calculus, and Statistics.</li>
-	    <li>Although forum discussions survive, the original concept and wider implementation of using a school-issue Casio graphics calculator as a field data logger and display tool were first published by Michael Fenton on the Nexus Research Group website (now offline). This work was presented at various national and international education conferences.</li>
+	    <li>Although forum discussions survive, the original concept and wider implementation of using a school-issue Casio graphic calculator as a field data logger and display tool were first published by Michael Fenton on the Nexus Research Group website (now offline). This work was presented at various national and international education conferences.</li>
             <li>Michael pioneered the general use of a low-cost, scalable solution to make experimental and hands-on authentic maths, science, and discovery learning accessible in resource-limited schools.</li>
           </ul>
 	</section>
 	<h3 id="build-it">Build it</h3>
-	<p>Picaxe microcontrollers are low cost. The 08M2 being small, very robust, and easily capable of communicating with the Casio graphics calculator at T9600 baud. Constructing a bi-directional cable is simple and low-cost, using two 2.5mm 3-pin plugs</p>
+	<p>Picaxe microcontrollers are low cost. The 08M2 being small, very robust, and easily capable of communicating with the Casio graphic calculator at T9600 baud. Constructing a bi-directional cable is simple and low-cost, using two 2.5mm 3-pin plugs</p>
 	<blockquote><span lang="en"><strong>'Build it '</strong><a href="../files/michael-fenton-casio-calculator-picaxe-sensors.pdf" target="_blank"> Download Picaxe circuit and coding guide [PDF]</a></span></blockquote>
 	<h3 id="test-it">Test it</h3>
 	<p>Students were familiar with many standard calculator functions, but learners had no experience of Casio Basic to code their own programmes. Students carried out a number of teacher-guided activities pre-tested and guaranteed to work. Temperature and range (distance) sensors were attached to the Picaxe which sent data at regular intervals to the Casio FX-9750. This built up their confidence and provided some prior knowledge before embarking on their own investigations. A typical introductory worksheet had three stages;
@@ -126,9 +126,9 @@ use integrals to solve problems”. This includes using Simpson’s rule. Demons
 
 	<h4 id="making-diy-home-made-sensors">Making low cost DIY home-made sensors</h4>
 	<p>Since the early 2000's Michael has developed a number of sensors; some are shown on his YouTube channel. Some sensors are very simple single component sensors costing a few cents. Other sensors are inexpensive but include a power source and a few more components. Apart from the straightforward voltage, current and resistance measurements, the multi-meters can also detect; visible light, infra-red light, ultra-violet light, ionising radiation such as alpha particles, temperature, angle, bend, salt, humidity, pressure, touch, paper thickness, mobile phone transmissions, static electric fields, and more.</p>
-<p>All of these sensors can be connected to a Casio graphics calculator using a low-cost ($6) Picaxe microcontroller.</p>
+<p>All of these sensors can be connected to a Casio graphic calculator using a low-cost ($6) Picaxe microcontroller.</p>
 	<h3 id="presentations">YouTube videos</h3>
-	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. Casi was a Picaxe controlled tracked robot that was driven remotely using a Casio FX-9750 graphics calculator connected to a Picaxe 08M2 interface unit. Casi, sadly, no longer exists.</p>
+	<p>Michael has documented many of his do-it-yourself, low-cost sensors and science equipment in YouTube videos. Casi was a Picaxe controlled tracked robot that was driven remotely using a Casio FX-9750 graphic calculator connected to a Picaxe 08M2 interface unit. Casi, sadly, no longer exists.</p>
 <iframe width="370" height="370"
         src="https://www.youtube.com/embed/MnuDkM_8Cdg"
         title="Digital multimeter heat sensor"
