--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
           <p><a href="projects/digital-multimeters-as-dataloggers.html" aria-label="Link to digital multimeter project details">Link to digital multimeter project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
-          <h4 id="project2-title">Picaxe Casio graphics Calculator: Low-Cost Sensor Upgrade for Authentic STEM Learning</h4>
+          <h4 id="project2-title">Picaxe Casio Graphic Calculator: Low-Cost Sensor Upgrade for Authentic STEM Learning</h4>
           <p><a href="projects/casio-calculator-picaxe-sensors.html" aria-label="Link to Casio and Picaxe project details">Link to Casio and Picaxe project details</a></p>
         </article>
         <article class="card" aria-labelledby="project2-title">
